deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsebas
  labels:
    app: appsebas
spec:
  selector:
    matchLabels:
      app: appsebas
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: appsebas
    spec:
      containers:
      - name: appsebas
        image: 152512582646.dkr.ecr.us-east-2.amazonaws.com/repo-app-sebas:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
