service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pruebaangular
  labels:
    app: pruebaangular
spec:
  selector:
    app: pruebaangular
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: pruebaangular
