ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appsebas
spec:
  backend:
    serviceName: appsebas
    servicePort: 80
